--- a/forums-client-site/package.json
+++ b/forums-client-site/package.json
@@ -10,14 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
+    "react-select": "^5.10.2",
+    "react-share": "^5.2.2",
+    "recharts": "^3.1.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
